--- a/src/components/FormInput.css
+++ b/src/components/FormInput.css
@@ -1,7 +1,7 @@
 .formInput{
     display: flex;
     flex-direction: column;
-    width: 280px;
+    width: auto;
 }
 
 input{
